(rule
 (alias extract-examples)
 (deps lib/version.sh lib/skdoc.sh lib/skdoc.py)
 (action (run bash lib/skdoc.sh examples)))

(rule
 (alias mkdocs)
 (deps lib/version.sh lib/skdoc.sh lib/skdoc.py lib/ndarray.mli
       lib/version.mli lib/PyList.mli mkdocs.yml README.md)
 (action
  (progn
    (run bash lib/skdoc.sh doc)
    (run lib/replace-variables.sh README.md doc/README.md)
    (with-stdin-from lib/ndarray.mli (with-stdout-to ndarray.md (run lib/mli2md)))
    (with-stdin-from lib/PyList.mli (with-stdout-to PyList.md (run lib/mli2md)))
    (with-stdin-from lib/version.mli (with-stdout-to version.md (run lib/mli2md)))
    (run cp ndarray.md version.md doc/)
    (run mkdocs build))
  ))
