opam-version: "2.0"
version: "np1.19-0.3.1"
synopsis: "Fundamental scientific computing with Numpy for OCaml"
description: """
These are OCaml bindings to Numpy, the fundamental package for scientific computing with Python:
- powerful n-dimensional arrays
- numerical computing tools
- interoperable
- performant
- easy to use
- open source.
"""
maintainer: ["Ronan Le Hy <ronan.lehy@gmail.com>"]
authors: ["Ronan Le Hy"]
license: "BSD-3-Clause"
homepage: "https://github.com/lehy/ocaml-sklearn"
bug-reports: "https://github.com/lehy/ocaml-sklearn/issues"
depends: [
  "dune" {>= "2.4"}
  "ocaml" {>= "4.07.1"}
  "pyml" {>= "20200222"}
]
build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/lehy/ocaml-sklearn.git"
