opam-version: "2.0"
synopsis: "Required packages for developing ocaml-sklearn/scipy/numpy"
description: """
Install with:

    opam install . --deps-only
"""
version: "0.3.1"
maintainer: ["Ronan Le Hy <ronan.lehy@gmail.com>"]
authors: ["Ronan Le Hy"]
license: "BSD-3-Clause"
homepage: "https://github.com/lehy/ocaml-sklearn"
bug-reports: "https://github.com/lehy/ocaml-sklearn/issues"
depends: [
  "ppx_expect"
  "ocaml-lsp-server"
  "merlin"
  "jupyter"
  "matplotlib"
  "shell"
]

