opam-version: "2.0"
version: "sp1.4-0.3.0"
synopsis: "SciPy scientific computing library for OCaml"
description: """
These are OCaml bindings to the SciPy Python library.
The SciPy library provides many
user-friendly and efficient numerical routines, such as routines for
numerical integration, interpolation, optimization, linear algebra,
and statistics.
"""
maintainer: ["Ronan Le Hy <ronan.lehy@gmail.com>"]
authors: ["Ronan Le Hy"]
license: "BSD-3-Clause"
homepage: "https://github.com/lehy/ocaml-sklearn"
bug-reports: "https://github.com/lehy/ocaml-sklearn/issues"
depends: [
  "dune" {>= "2.4"}
  "ocaml" {>= "4.07.1"}
  "pyml" {>= "20200222"}
  "np" {= "np1.18-0.3.0"}
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/lehy/ocaml-sklearn.git"
