(library
 (public_name scipy)
 (libraries bigarray pyml))

;; 58 is due to pyml, not sure what to do about it
;; Warning 58: no cmx file was found in path for module Numpy, and its interface was not compiled with -opaque
(env
 (dev
  (flags (:standard -w -58))))

;; No other way atm to share code between scipy and sklearn using a private
;; library with dune.
;; https://github.com/ocaml/dune/issues/1017
(rule (copy ../common/wrap_utils_common.ml wrap_utils_common.ml))

(rule (targets
       cluster.ml
       cluster.mli
       conftest.ml
       conftest.mli
       constants.ml
       constants.mli
       fft.ml
       fft.mli
       fftpack.ml
       fftpack.mli
       integrate.ml
       integrate.mli
       interpolate.ml
       interpolate.mli
       io.ml
       io.mli
       misc.ml
       misc.mli
       ndimage.ml
       ndimage.mli
       odr.ml
       odr.mli
       setup.ml
       setup.mli
       signal.ml
       signal.mli
       stats.ml
       stats.mli
       wrap_version.ml
       )
      (deps ../version.sh ../skdoc.sh ../skdoc.py)
      (action (run bash ../skdoc.sh build-scipy))
      (mode fallback))
