(library
 (public_name scipy)
 (libraries bigarray pyml np))

;; 58 is due to pyml, not sure what to do about it
;; Warning 58: no cmx file was found in path for module Numpy, and its interface was not compiled with -opaque
(env
 (dev
  (flags (:standard -w -58))))

;; No other way atm to share code between scipy and sklearn using a private
;; library with dune.
;; https://github.com/ocaml/dune/issues/1017
(rule (copy ../common/wrap_utils_common.ml wrap_utils_common.ml))

(rule (targets
       Cluster.ml
       Cluster.mli
       Conftest.ml
       Conftest.mli
       Constants.ml
       Constants.mli
       Fft.ml
       Fft.mli
       Fftpack.ml
       Fftpack.mli
       Integrate.ml
       Integrate.mli
       Interpolate.ml
       Interpolate.mli
       Io.ml
       Io.mli
       Linalg.ml
       Linalg.mli
       Misc.ml
       Misc.mli
       Ndimage.ml
       Ndimage.mli
       Odr.ml
       Odr.mli
       Optimize.ml
       Optimize.mli
       Setup.ml
       Setup.mli
       Signal.ml
       Signal.mli
       Sparse.ml
       Sparse.mli
       Spatial.ml
       Spatial.mli
       Special.ml
       Special.mli
       Stats.ml
       Stats.mli
       Version.ml
       Version.mli
       wrap_version.ml
       skdoc.log)
      (deps ../version.sh ../skdoc.sh ../skdoc.py)
      (action (run bash ../skdoc.sh build scipy))
      (mode fallback))
